# Magneta_Zephyr

./: CMakeLists.txt  prj.conf
boards/arm/magneta_v1/: Kconfig.board  Kconfig.defconfig  magneta_v1-pinctrl.dtsi  magneta_v1.dts  magneta_v1.yaml  magneta_v1_defconfig
src/: app.c  app.h  board.h  button.c  button.h  main.c
src/bm83/: AT.cpp  AT.h  AVRCP.cpp  AVRCP.h  BM83.cpp  BM83.h  IS2020.cpp  IS2020.h  MMI.cpp  MMI.h  Music.cpp  Music.h  commands.cpp  commands.h  events.cpp  events.h  iso2083.h  uart.c  uart.h
src/bma400/: bma400.c  bma400_defs.h  bma400_service.c  bma400_service.h  common.c  common.h
